--- a/userint/templates/userint/entry.html
+++ b/userint/templates/userint/entry.html
@@ -436,12 +436,12 @@
             <p class="dis mb-3 updates"><b>2nd APRIL 6pm - 3rd APRIL 6pm (IST)</b></p>
             <p class="dis mb-3 different"><b>Please read the instructions before submission.</b></p>
             <div class="dis">
-                <p class="black"><span class="fas fa-arrow-right mb-3 pe-2"></span>The portal will be closing at 6pm , 3rd April 2022 IST.</p>
+                <p class="black"><span class="fas fa-arrow-right mb-3 pe-2"></span>The portal will be closing at 6pm , 11th March 2023 IST.</p>
                 <p class="white"><span class="fas fa-arrow-right mb-3 pe-2"></span>You will be able to change your submission, until the portal closes.</p>
                 <p class="pastel"><span class="fas fa-arrow-right mb-3 pe-2"></span>Please don't share your account credentials with anyone.</p>
             </div>
             <div>
-                <p class="dis footer my-3">In case of any problem please contact Shaurya 9330566087 with screenshot.</p>
+                <p class="dis footer my-3">In case of any problem please contact Sourodeep 9836526183 with screenshot.</p>
             </div>
         </div>
     </div>
@@ -458,7 +458,7 @@
                     
                     </table>
                         <div class="d-flex align-items-center justify-content-between mb-2">
-                           <font size="2" color="red"> <p>*Participants will be allowed to change the submission till 6pm 3rd April 2022 (IST)</p>
+                           <font size="2" color="red"> <p>*Participants will be allowed to change the submission till 6pm 11th March 2023 (IST)</p>
                            </font><br>
                         </div>
     
