--- a/userint/templates/userint/login.html
+++ b/userint/templates/userint/login.html
@@ -138,7 +138,7 @@
                 <div class="inputBox"> <input id="userid" type="text" name="userid" placeholder="Team Id"> <input id="password" type="password" name="password" placeholder="Password"> </div> <input type="submit" name="" value="Login">
             </form> <font color="white" size="2">For any Help, Contact:<br></font> 
             <div class="text-center">
-                <p style="color: #b367ff;"> Shaurya +91 9330566087</p>
+                <p style="color: #b367ff;"> Sourodeep +91 9836526183</p>
                 <p style="color: #b367ff;">Made by <a style="color:#ffffff; text-decoration:none;" href="https://www.linkedin.com/in/kausarde/">Kausar</a> and <a style="color:#ffffff; text-decoration:none;" href="https://www.linkedin.com/in/shaurya-shrivastava-725687209/">Shaurya</a></p>
             </div>
         </div>
