--- a/userint/templates/userint/thankyou.html
+++ b/userint/templates/userint/thankyou.html
@@ -141,7 +141,7 @@
                     <font face="arial">  404 Not Found </font></h2>
                 <div class="new2">
                     <h2 class="new3">
-                    <font face="arial"> You can modify the submission till 6pm 3rd APRIL 2022 , (IST). </font></h2>
+                    <font face="arial"> You can modify the submission till 6pm 11th March 2023 , (IST). </font></h2>
                 </div>
             
                 <div class="error-actions">
