--- a/userint/templates/userint/entry.html
+++ b/userint/templates/userint/entry.html
@@ -418,13 +418,24 @@
                 <font size="7"><p style="font-family: 'Anton', sans-serif;">404 NOT FOUND</p></font>
                 
             </div>
-            <p class="fw-bold">Problem Statement:</p>
+            <p class="fw-bold">Choose Your SKILL LEVEL And Answer Only ONE Question:</p>
+
+            <p class="fw-bold">BEGINNER Level Questions:</p>
            
             <p class="dis my-3 info"><br>
-                1. As a new Customer I want to signup for a web portal<br>
-                2. As an existing customer I want to login to a web portal<br>
-                3. I should have option to recover/reset  password.<br>
-                4. The User Data must be stored securely. <br></p>
+                1. Design a web Portal where a user with an account can generate a customized banner based on the details filled in a form.<br>
+                2. Job recruitment web application with two types of user recruiter and seeker, where a recruiter can post a job and a job seeker and filter the listed jobs and apply to it by simply filling a form, and the application gets mailed to the recruiter.<br>
+                3. A Library Management system with user authentication and renting system.<br>
+                4. Notes Sharing Platform with owner access and renting to people for few days who pay some amount of money for it.<br>
+                5. Project collaboration Platform with a chat feature, authentication, and media-sharing abilities.</p>
+            <p class="fw-bold">ADVANCED Level Questions:</p>
+           
+            <p class="dis my-3 info"><br>
+                1. A website for guiding old people/newcomers to the city by providing them a list of the nearest shops for daily requirements by using Google Maps API.<br>
+                2. A website for hosting live online events with the feature of certificates(self-generated) to all attendees.<br>
+                3. A website for comparing the prices of products at different e-commerce platforms and suggesting the cheapest price of a product at that instance of time.<br>
+                4. A decentralized voting system that checks the genuineness of votes using face biometric matching from Aadhar Card API<br>
+                5. A tourist guiding platform that guides a person on which places to visit, and what food to eat and prepares a schedule depending upon the number of days of travel to ensure the best visiting experience to a city.</p>
             <p class="fw-bold">Requirement:</p>
              
             <p class="dis my-3 info"><br>
@@ -433,7 +444,7 @@
                 3. After login a user details page must be displayed with all the captured user data.<br>
                 4. Sign out functionality must be available.<br>
                 5. Personal data must be stored securely and must be encrypted.<br></p>
-            <p class="dis mb-3 updates"><b>2nd APRIL 6pm - 3rd APRIL 6pm (IST)</b></p>
+            <p class="dis mb-3 updates"><b>10th March 6pm - 11th March 6pm (IST)</b></p>
             <p class="dis mb-3 different"><b>Please read the instructions before submission.</b></p>
             <div class="dis">
                 <p class="black"><span class="fas fa-arrow-right mb-3 pe-2"></span>The portal will be closing at 6pm , 11th March 2023 IST.</p>
