Small spacing change

--- a/userint/templates/userint/entry.html
+++ b/userint/templates/userint/entry.html
@@ -418,11 +418,11 @@
                 <font size="7"><p style="font-family: 'Anton', sans-serif;">404 NOT FOUND</p></font>
                 
             </div>
-            <p class="fw-bold">Choose Your SKILL LEVEL And Answer Only ONE Question:</p>
+            <p class="fw-bold">Choose Your SKILL LEVEL And Answer Only ONE Question:</p><br>
 
             <p class="fw-bold">BEGINNER Level Questions:</p>
            
-            <p class="dis my-3 info"><br>
+            <p class="dis my-3 info">
                 1. Design a web Portal where a user with an account can generate a customized banner based on the details filled in a form.<br>
                 2. Job recruitment web application with two types of user recruiter and seeker, where a recruiter can post a job and a job seeker and filter the listed jobs and apply to it by simply filling a form, and the application gets mailed to the recruiter.<br>
                 3. A Library Management system with user authentication and renting system.<br>
@@ -430,7 +430,7 @@
                 5. Project collaboration Platform with a chat feature, authentication, and media-sharing abilities.</p>
             <p class="fw-bold">ADVANCED Level Questions:</p>
            
-            <p class="dis my-3 info"><br>
+            <p class="dis my-3 info">
                 1. A website for guiding old people/newcomers to the city by providing them a list of the nearest shops for daily requirements by using Google Maps API.<br>
                 2. A website for hosting live online events with the feature of certificates(self-generated) to all attendees.<br>
                 3. A website for comparing the prices of products at different e-commerce platforms and suggesting the cheapest price of a product at that instance of time.<br>
