Small spacing change

--- a/userint/templates/userint/entry.html
+++ b/userint/templates/userint/entry.html
@@ -438,7 +438,7 @@
                 5. A tourist guiding platform that guides a person on which places to visit, and what food to eat and prepares a schedule depending upon the number of days of travel to ensure the best visiting experience to a city.</p>
             <p class="fw-bold">Requirement:</p>
              
-            <p class="dis my-3 info"><br>
+            <p class="dis my-3 info">
                 1. Portal should be supporting multiple devices, like laptop, tablet and mobile.<br>
                 2. Multiple users signup/login must be supported.<br>
                 3. After login a user details page must be displayed with all the captured user data.<br>
